test/error/E39.chigmod
{
	"name": "hello",
	"dependencies": 213
}
